--- a/package.json
+++ b/package.json
@@ -1,35 +1,31 @@
 {
-  "name": "staticsitegenerator",
-  "author": "Alan Shortis",
-  "version": "1.0.0",
-  "description": "A static site generator, for quick prototyping",
-  "private": true,
+  "name": "static-site-generator",
+  "version": "1.1.0",
+  "description": "Static site generator for quick prototyping",
+  "main": "index.js",
+  "repository": "git@github.com:alanshortis/static-site-generator.git",
+  "author": "Alan Shortis <alan.shortis@mac.com>",
   "license": "MIT",
+  "private": true,
   "scripts": {
     "start": "gulp"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/alanshortis/static-site-generator"
   },
   "engines" : {
     "node": ">=4.5"
   },
   "devDependencies": {
-    "browserify": "^13.1.0",
-    "del": "^2.2.1",
+    "browser-sync": "^2.18.6",
+    "browserify": "^13.3.0",
+    "del": "^2.2.2",
     "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^3.1.0",
-    "gulp-connect": "^5.0.0",
-    "gulp-handlebars-html": "0.0.2",
-    "gulp-imagemin": "^3.0.3",
+    "gulp-autoprefixer": "^3.1.1",
+    "gulp-cheerio": "^0.6.2",
+    "gulp-handlebars-html": "^0.0.2",
     "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.3.2",
-    "gulp-sourcemaps": "^1.6.0",
-    "handlebars": "^4.0.5",
-    "js-cookie": "^2.1.2",
-    "node-notifier": "^4.6.0",
-    "screenfull": "^3.0.2",
+    "gulp-sass": "^3.1.0",
+    "gulp-sourcemaps": "^2.4.0",
+    "handlebars": "^4.0.6",
+    "node-notifier": "^4.6.1",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   }
