--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "start": "gulp"
   },
-  "engines" : {
+  "engines": {
     "node": ">=4.5"
   },
   "devDependencies": {
@@ -19,10 +19,11 @@
     "del": "^2.2.2",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
-    "gulp-cheerio": "^0.6.2",
     "gulp-handlebars-html": "^0.0.2",
+    "gulp-eslint": "^3.0.1",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
+    "gulp-sass-lint": "^1.3.2",
     "gulp-sourcemaps": "^2.4.0",
     "handlebars": "^4.0.6",
     "node-notifier": "^4.6.1",
